; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/bios/extr_init.c_init_condition_met.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/bios/extr_init.c_init_condition_met.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvbios_init = type { %struct.nouveau_bios* }
%struct.nouveau_bios = type { i32 }

@.str = private unnamed_addr constant [42 x i8] c"\09[0x%02x] (R[0x%06x] & 0x%08x) == 0x%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nvbios_init*, i32)* @init_condition_met to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_condition_met(%struct.nvbios_init* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nvbios_init*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.nouveau_bios*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.nvbios_init* %0, %struct.nvbios_init** %4, align 8
  store i32 %1, i32* %5, align 4
  %11 = load %struct.nvbios_init*, %struct.nvbios_init** %4, align 8
  %12 = getelementptr inbounds %struct.nvbios_init, %struct.nvbios_init* %11, i32 0, i32 0
  %13 = load %struct.nouveau_bios*, %struct.nouveau_bios** %12, align 8
  store %struct.nouveau_bios* %13, %struct.nouveau_bios** %6, align 8
  %14 = load %struct.nvbios_init*, %struct.nvbios_init** %4, align 8
  %15 = call i64 @init_condition_table(%struct.nvbios_init* %14)
  store i64 %15, i64* %7, align 8
  %16 = load i64, i64* %7, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %56

18:                                               ; preds = %2
  %19 = load %struct.nouveau_bios*, %struct.nouveau_bios** %6, align 8
  %20 = load i64, i64* %7, align 8
  %21 = load i32, i32* %5, align 4
  %22 = mul nsw i32 %21, 12
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %20, %23
  %25 = add nsw i64 %24, 0
  %26 = call i32 @nv_ro32(%struct.nouveau_bios* %19, i64 %25)
  store i32 %26, i32* %8, align 4
  %27 = load %struct.nouveau_bios*, %struct.nouveau_bios** %6, align 8
  %28 = load i64, i64* %7, align 8
  %29 = load i32, i32* %5, align 4
  %30 = mul nsw i32 %29, 12
  %31 = sext i32 %30 to i64
  %32 = add nsw i64 %28, %31
  %33 = add nsw i64 %32, 4
  %34 = call i32 @nv_ro32(%struct.nouveau_bios* %27, i64 %33)
  store i32 %34, i32* %9, align 4
  %35 = load %struct.nouveau_bios*, %struct.nouveau_bios** %6, align 8
  %36 = load i64, i64* %7, align 8
  %37 = load i32, i32* %5, align 4
  %38 = mul nsw i32 %37, 12
  %39 = sext i32 %38 to i64
  %40 = add nsw i64 %36, %39
  %41 = add nsw i64 %40, 8
  %42 = call i32 @nv_ro32(%struct.nouveau_bios* %35, i64 %41)
  store i32 %42, i32* %10, align 4
  %43 = load i32, i32* %5, align 4
  %44 = load i32, i32* %8, align 4
  %45 = load i32, i32* %9, align 4
  %46 = load i32, i32* %10, align 4
  %47 = call i32 @trace(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %43, i32 %44, i32 %45, i32 %46)
  %48 = load %struct.nvbios_init*, %struct.nvbios_init** %4, align 8
  %49 = load i32, i32* %8, align 4
  %50 = call i32 @init_rd32(%struct.nvbios_init* %48, i32 %49)
  %51 = load i32, i32* %9, align 4
  %52 = and i32 %50, %51
  %53 = load i32, i32* %10, align 4
  %54 = icmp eq i32 %52, %53
  %55 = zext i1 %54 to i32
  store i32 %55, i32* %3, align 4
  br label %57

56:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %57

57:                                               ; preds = %56, %18
  %58 = load i32, i32* %3, align 4
  ret i32 %58
}

declare dso_local i64 @init_condition_table(%struct.nvbios_init*) #1

declare dso_local i32 @nv_ro32(%struct.nouveau_bios*, i64) #1

declare dso_local i32 @trace(i8*, i32, i32, i32, i32) #1

declare dso_local i32 @init_rd32(%struct.nvbios_init*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
